Test/git-issues/git-issue-2019.dfy.expect
git-issue-2019.dfy(17,9): Error: Duplicate member name: f
1 resolution/type errors detected in git-issue-2019.dfy
